# serializer version: 1
# name: test_config_flow_preview_success[missing_calibration_factor]
  dict({
    'attributes': dict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mold Indicator',
      'state_class': 'measurement',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'state': 'unavailable',
  })
# ---
# name: test_config_flow_preview_success[missing_humidity_entity]
  dict({
    'attributes': dict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mold Indicator',
      'state_class': 'measurement',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'state': 'unavailable',
  })
# ---
# name: test_config_flow_preview_success[success]
  dict({
    'attributes': dict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      'dewpoint': 12.01,
      'estimated_critical_temp': 19.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mold Indicator',
      'state_class': 'measurement',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'state': '61',
  })
# ---
# name: test_options_flow_preview
  dict({
    'attributes': dict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'humidity',
      'dewpoint': 12.01,
      'estimated_critical_temp': 19.5,
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Mold Indicator',
      'state_class': 'measurement',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'state': '61',
  })
# ---
